# systemconfiguration-rs

./: CHANGELOG.md  COVERAGE.md  COVERAGE_AUDIT.md  COVERAGE_AUDIT_V2.md  Cargo.toml  README.md  build.rs
examples/: 01_dynamic_store_overview.rs  01_interfaces_and_reachability.rs  02_network_configuration_overview.rs  03_network_reachability.rs  04_preferences_session.rs  05_schema_catalog.rs  06_network_services.rs  07_network_sets.rs  08_network_interface.rs  09_network_protocol.rs  10_console_user.rs  11_captive_network.rs  23_schema_definitions_constants.rs  50_async_dynamic_store.rs  51_async_reachability.rs  52_async_preferences.rs
src/: async_api.rs  bond_interface.rs  bridge.rs  captive_network.rs  cf.rs  console_user.rs  dynamic_store.rs  error.rs  ffi.rs  lib.rs  network_configuration.rs  network_connection.rs  network_interface.rs  network_protocol.rs  network_reachability.rs  network_services.rs  network_sets.rs  preferences.rs  property_list.rs  raw_ffi.rs  reachability.rs  schema.rs  schema_definitions.rs  system_configuration.rs  vlan_interface.rs
src/ffi/: async_api.rs  captive_network.rs  console_user.rs  core.rs  dynamic_store.rs  mod.rs  network_configuration.rs  network_connection.rs  network_interface.rs  network_protocol.rs  network_reachability.rs  network_services.rs  network_sets.rs  preferences.rs  schema.rs  system_configuration.rs
swift-bridge/: Package.swift
swift-bridge/Sources/SystemConfigurationBridge/: AsyncStream.swift  CaptiveNetwork.swift  ConsoleUser.swift  Core.swift  DynamicStore.swift  DynamicStoreExtras.swift  NetworkConfiguration.swift  NetworkConnection.swift  NetworkInterface.swift  NetworkInterfaceExtras.swift  NetworkProtocol.swift  NetworkProtocolExtras.swift  NetworkReachability.swift  NetworkServices.swift  NetworkServicesExtras.swift  NetworkSets.swift  NetworkSetsExtras.swift  Preferences.swift  Schema.swift  SystemConfiguration.swift
swift-bridge/Sources/SystemConfigurationBridge/include/: SystemConfigurationBridge.h
tests/: async_stream_tests.rs  captive_network_tests.rs  console_user_tests.rs  dynamic_store_tests.rs  network_configuration_tests.rs  network_interface_tests.rs  network_protocol_tests.rs  network_reachability_tests.rs  network_services_tests.rs  network_sets_tests.rs  preferences_tests.rs  schema_definitions_tests.rs  schema_tests.rs  system_configuration_tests.rs
tests/common/: mod.rs
