[package]
name = "systemconfiguration-rs"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/doom-fish/systemconfiguration-rs"
repository = "https://github.com/doom-fish/systemconfiguration-rs"
description = "Safe Rust bindings for Apple's SystemConfiguration framework — reachability, dynamic store, preferences, interfaces, and services on macOS"
authors = ["Per Johansson <per@doom.fish>"]
keywords = ["systemconfiguration", "macos", "network", "reachability", "apple"]
categories = ["api-bindings", "network-programming", "os::macos-apis"]
rust-version = "1.76"
readme = "README.md"
build = "build.rs"
include = [
    "src/**/*",
    "examples/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE-*",
    "CHANGELOG.md",
]

[lints.rust]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[lib]
name = "systemconfiguration"
crate-type = ["lib"]

[features]
default = []

[dependencies]
libc = "0.2"

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[[example]]
name = "01_interfaces_and_reachability"

[profile.release]
debug = "full"
strip = "none"
