[package]
name = "systemconfiguration-rs"
version = "0.5.5"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/doom-fish/systemconfiguration-rs"
repository = "https://github.com/doom-fish/systemconfiguration-rs"
description = "Safe Rust bindings for Apple's SystemConfiguration framework via a Swift bridge on macOS"
authors = ["Per Johansson <per@doom.fish>"]
keywords = ["systemconfiguration", "macos", "network", "reachability", "apple"]
categories = ["api-bindings", "network-programming", "os::macos-apis"]
rust-version = "1.76"
readme = "README.md"
build = "build.rs"
include = [
    "src/**/*",
    "swift-bridge/Package.swift",
    "swift-bridge/Sources/**/*",
    "examples/**/*",
    "tests/**/*",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "COVERAGE.md",
    "LICENSE-*",
]

[lints.rust]

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[lib]
name = "systemconfiguration"
crate-type = ["lib"]

[features]
default = []
raw-ffi = []
async = ["dep:doom-fish-utils"]

[dependencies]
apple-cf = { version = ">=0.8, <0.10", default-features = false, features = ["cg"] }
libc = "0.2"
doom-fish-utils = { path = "../doom-fish-utils", version = ">=0.1, <0.4", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
pollster = "0.3"

[package.metadata.docs.rs]
all-features = true
default-target = "aarch64-apple-darwin"
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
rustdoc-args = ["--cfg", "docsrs"]

[badges]
maintenance = { status = "actively-developed" }

[profile.release]
debug = "full"
strip = "none"
